<resources>
    <string name="app_name">Material Tipper</string>
    <string name="action_settings"> About App </string>


    <string name="BillInfoTitle">Meal Pricing Info</string>
    <string name="MealPricePrompt">Enter your Meal Price:</string>
    <string name="TipRatePrompt">Enter your Tip Rate:</string>
    <string name="SplitBillButton">Split your Bill</string>
    <string name="Submit">See Your Bill</string>

    <string name="MealPriceHint" >Cost</string>
    <string name="TipRateHint" >Percent</string>

    <string name="BillTitle"> Bill per Person </string>
    <string name="MealPriceBill"> Meal Price: </string>
    <string name="TaxRateBill"> Taxes: </string>
    <string name="TipRateBill"> Tips: </string>
    <string name="finalTotal"> Total: </string>
    <string name="split_bill_dialog_title">Number of People</string>
    <string name="numPeople_hint">Number of People</string>
    <string name="split_bill_warning">Enter the number of people</string>
    <string name="submit_button_splitDialog">Submit</string>
    <string name="cancel_button_splitDialog">Cancel</string>

    <string-array name="currencies">
        <item>Dollars</item>
        <item>Euros</item>
        <item>Yen</item>
        <item>Yuan</item>
        <item>Ruble</item>
        <item>Rupee</item>
        <item>Krone</item>
        <item>Real</item>
    </string-array>

    <string-array name="currencySymbols">
        <item>$</item>
        <item>€</item>
        <item>¥</item>
        <item>¥</item>
        <item>₽</item>
        <item>₹</item>
        <item>kr</item>
        <item>R$</item>
    </string-array>

</resources>
