<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/split_bill_dialog_title"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_bill_warning"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/numPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numPeople_hint"
            android:singleLine="true"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="2"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:padding="0dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/submit_button_splitDialog" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_toLeftOf="@+id/splitButton"
            android:layout_toStartOf="@+id/splitButton"
            android:layout_centerVertical="true"
            android:minHeight="36dp"
            android:text="@string/cancel_button_splitDialog" />
    </RelativeLayout>

</LinearLayout>